--- a/hackathon.html
+++ b/hackathon.html
@@ -7,20 +7,18 @@
     <title>Am I ready for CODESMITH Technical?</title>
 </head>
 <body>
-    <div id="boot-legged">
+    <!-- <div id="boot-legged">
     <h1>Welcome to the Boot-legged Codesmith Interview</h2>
     Answer the following questions to see whether or not your *** can get in. 
-        <!-- ADD BUTTON THAT HAS FUNCTIONALITY  -->
+      
         <button id="full">I am Ready!</button>
         <button id="not">I am not ready!</button>
     </div>
-    <h2>We know... studying isn't easy.</h1>
-    <div id="david">
-    <p>Did you know David Goggins once said, <br>
-        <strong>“You are in danger of living a life so comfortable and soft, that you will die without ever realizing your true potential.”</strong>
-        So, let us see if it takes what you got: 
-    </p>
-</div>
+   
+    <div>
+
+    </div> -->
     <script src="hackathon.js"></script>
+    <script src="getQuotes.js"></script>
 </body>
 </html>
